tests/samples/invalid/reserved_keyword_as_identifier.pn

fn i128()
{
	var ok = true;
}

fn foo()
{
	var usize = true;
}

struct void
{
	x: i32,
}

struct Bar
{
	bool: i32,
}
